--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ HOST_DB=
 USER_DB=
 PASSWORD_DB=
 DATABASE=
-DATABASE_URL=
+DATABASE_URL=postgresql://${USER_DB}:${PASSWORD_DB}@${HOST_DB}/${DATABASE}
