--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,12 @@ python:
 # command to install dependencies
 install:
     - pip install -r requirements.txt
+services:
+    - postgresql
 # command to run tests
+before_script:
+    - psql -c "CREATE USER testing WITH PASSWORD '1234';" -U postgres
+    - psql -c "CREATE DATABASE flask;" -U postgres
 script:
+    - flask db upgrade
     - pytest
