--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ before_script:
     - psql -c "CREATE USER testing WITH PASSWORD '1234';" -U postgres
     - psql -c "CREATE DATABASE flask;" -U postgres
 script:
+    - set FLASK_APP=run.py
     - flask db upgrade
     - pytest
