--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ install:
     - pip install -r requirements.txt
 env:
     - FLASK_APP=run.py
+    - DATABASE_URL=postgresql://testing:1234@localhost/flask
 services:
     - postgresql
 # command to run tests
@@ -13,6 +14,5 @@ before_script:
     - psql -c "CREATE USER testing WITH PASSWORD '1234';" -U postgres
     - psql -c "CREATE DATABASE flask;" -U postgres
 script:
-    - set FLASK_APP=run.py
     - flask db upgrade
     - pytest
