--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-pytest
-pytest-aiohttp
-asyncio
-asyncmock
-mock
-flask
-aiohttp
-schema
-Flask-Sqlalchemy
-Flask-Migrate
-black
-Faker
-python-dotenv
-datetime
-pytz
-psycopg2
-waitress
+aiohttp==3.7.4.post0
+asyncio== 3.4.3
+asyncmock==0.4.2
+black==21.9b0
+DateTime==4.3
+Faker==8.14.1
+Flask==2.0.1
+Flask-Migrate==3.1.0
+Flask-Sqlalchemy==2.5.1
+mock==4.0.3
+psycopg2==2.9.1
+pytest==6.2.5
+pytest-aiohttp==0.3.0
+python-dotenv==0.19.0
+pytz==2021.1
+schema==0.7.4
+waitress==2.0.0
